--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -25,6 +26,7 @@
     --ring: 262 83% 58%;
     --radius: 0.5rem;
     --font-sans: var(--font-plus-jakarta-sans);
+    --font-lato:(var(--font-lato))
   }
 
   .dark {
@@ -55,7 +57,8 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-sans;
+    @apply bg-background text-foreground; /* Apply background and text color */
+    font-family: var(--font-inter); /* Use the Inter font variable */
   }
   h1,
   h2,
@@ -63,7 +66,8 @@
   h4,
   h5,
   h6 {
-    @apply font-sans font-bold;
+    font-family: var(--font-lato); /* Use the Lato font */
+    font-weight: 400;
   }
 }
 
