--- a/app/globals.css
+++ b/app/globals.css
@@ -435,6 +435,42 @@ section.pt-28.md\:pt-32.pb-16.md\:pb-15.mb-5.md\:mb-5.overflow-hidden.bg-transpa
   object-fit: contain;
 }
 
+.text-center.mb-8.w-full.md-1\/2.Leftline {
+  border-left: 1px solid #e3e3e3;
+    margin-left: 60px;
+}
+span.highlight p{
+  font-size: 14px;
+  font-weight: 300;
+  font-family: var(--font-lato);
+}
+  .LottiesFile{
+    width: 80%;
+    max-width: 100%;
+    overflow: hidden;
+    height: 450px;
+    align-items: center;
+    display: flex;
+    margin: auto;
+  }
+
+
+@media (max-width: 767px) {
+  .text-center.mb-8.w-full.md-1\/2.Leftline {
+  border-left: 0px solid #e3e3e3;
+    margin-left: 0px;
+}
+.LottiesFile{
+    width: 100%;    
+    height: 140px;   
+  }
+.ribbon span{
+  transform: rotate(0deg);
+  top: -10px;
+}
+  
+}
+
 @media (max-width: 640px) {
   .rexControl h5 {
     position: unset;
