--- a/app/globals.css
+++ b/app/globals.css
@@ -437,38 +437,85 @@ section.pt-28.md\:pt-32.pb-16.md\:pb-15.mb-5.md\:mb-5.overflow-hidden.bg-transpa
 
 .text-center.mb-8.w-full.md-1\/2.Leftline {
   border-left: 1px solid #e3e3e3;
-    margin-left: 60px;
+  margin-left: 60px;
 }
-span.highlight p{
+span.highlight p {
   font-size: 14px;
   font-weight: 300;
   font-family: var(--font-lato);
 }
-  .LottiesFile{
-    width: 80%;
-    max-width: 100%;
-    overflow: hidden;
-    height: 450px;
-    align-items: center;
-    display: flex;
-    margin: auto;
-  }
+.LottiesFile {
+  width: 80%;
+  max-width: 100%;
+  overflow: hidden;
+  height: 350px;
+  align-items: center;
+  display: flex;
+  margin: auto;
+}
+.play-video {
+  height: 60px;
+  width: 60px;
+  background-color: #792ef0;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+}
 
+.play-video::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(121, 46, 240, 0.5);
+  border-radius: 50%;
+  animation: pulse 1.5s ease-out infinite;
+  z-index: 0;
+}
+
+.play-video > * {
+  position: relative;
+  z-index: 1;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.7;
+  }
+  70% {
+    transform: scale(1.6);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.FreeTrial p:first-child{
+  font-size: 25px;
+  font-weight: 900;
+  font-family: 'Inter';
+  white-space: nowrap;
+}
 
 @media (max-width: 767px) {
   .text-center.mb-8.w-full.md-1\/2.Leftline {
-  border-left: 0px solid #e3e3e3;
+    border-left: 0px solid #e3e3e3;
     margin-left: 0px;
-}
-.LottiesFile{
-    width: 100%;    
-    height: 140px;   
   }
-.ribbon span{
-  transform: rotate(0deg);
-  top: -10px;
-}
-  
+  .LottiesFile {
+    width: 100%;
+    height: 140px;
+  }
+  .ribbon span {
+    transform: rotate(0deg);
+    top: -10px;
+  }
 }
 
 @media (max-width: 640px) {
