[AV] latest code here (AV1.1)

--- a/app/globals.css
+++ b/app/globals.css
@@ -500,7 +500,7 @@ span.highlight p {
   }
 }
 
-.FreeTrial p:second-child{
+.FreeTrial p:last-child{
   font-size: 14px;
   font-family: "Inter";
 }
