[AV] Updated Code here (AV1.1)

--- a/app/globals.css
+++ b/app/globals.css
@@ -502,6 +502,12 @@ span.highlight p {
   gap: 10px;
   align-items: center;
 }
+.logo_d{
+  width: 50%;
+}
+.h-10{
+  height: 2.5rem;
+}
 
 @keyframes pulse {
   0% {
