--- a/app/globals.css
+++ b/app/globals.css
@@ -499,12 +499,21 @@ span.highlight p {
 }
 .footer-d-logo {
   display: flex;
-  gap: 5px;
+  gap: 10px;
   align-items: center;
 }
 .logo_d {
   width: 100%;
   height: 1.27rem !important;
+}
+
+.DesignerxLogo{
+  max-width: 120px;
+  width: 100%;
+}
+
+.DesignerxLogo img{
+  width: 100%;
 }
 /* .h-10 {
   height: 1.5rem !important;
