[AV] updated code here (AV1.2)

--- a/app/globals.css
+++ b/app/globals.css
@@ -647,7 +647,12 @@ span.highlight p {
     overflow: hidden;
   }
   .DBlock {
-    display: block !important;
+    /* display: block !important; */
+    display: grid;
+    gap: 10px;
+    margin-right: auto;
+
+
   }
   .heroText p {
     font-size: 2rem !important;
